<resources>
    <string name="app_name">StoryApp</string>
    <string name="invalid_password">Minimum Length of Password is 6 Characters</string>
    <string name="login">Login</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="retry">Coba lagi</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="set_your_email_now">Set Your Email Now</string>
    <string name="log_in_now">Log in now</string>
    <string name="login_now">Login Now!</string>
    <string name="list_story">List Story</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="log_out">Log Out</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="the_map">The Map</string>

</resources>